--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +18,15 @@
   },
   "homepage": "https://github.com/cylon3035/sw-engine#readme",
   "devDependencies": {
-    "typescript": "^4.8.2"
+    "@stylable/webpack-plugin": "^5.2.0",
+    "@wixc3/engineer": "^27.0.1",
+    "html-webpack-plugin": "^5.5.0",
+    "typescript": "^4.8.2",
+    "webpack": "^5.74.0"
+  },
+  "dependencies": {
+    "@wixc3/engine-core": "^27.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
